--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/soleil_pictures_logo-02.jpg" />
+    <link rel="icon" type="image/png" href="/soleilpictures_favicon.png" />
     <link rel="stylesheet" href="https://use.typekit.net/roj5xwq.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KEEKOH</title>
